# pixelbot

./: .env.example  .gitignore  AGENTS.md  CODEGASE_GUIDE.md  README.md  config.py  endpoint.py  functions.py  pyproject.toml  requirements.txt  setup_pixeltable.py
.github/: CODEOWNERS
backend/: config.py  functions.py  main.py  models.py  pyproject.toml  queries.py  requirements.txt  setup_pixeltable.py  test_new_features.py  utils.py
backend/routers/: chat.py  database.py  experiments.py  export.py  files.py  history.py  images.py  integrations.py  memory.py  personas.py  studio.py
docs/: ISSUE-dynamic-agent-tools.md
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: app-layout.tsx
frontend/src/components/architecture/: architecture-page.tsx
frontend/src/components/chat/: chat-page.tsx  thinking-indicator.tsx
frontend/src/components/database/: column-flow-diagram.tsx  database-page.tsx  pipeline-inspector.tsx  table-management.tsx
frontend/src/components/developer/: developer-page.tsx
frontend/src/components/experiments/: experiments-page.tsx
frontend/src/components/files/: file-sidebar.tsx
frontend/src/components/history/: history-page.tsx
frontend/src/components/images/: images-page.tsx
frontend/src/components/integrations/: integrations-page.tsx
frontend/src/components/memory/: memory-page.tsx
frontend/src/components/settings/: settings-page.tsx
frontend/src/components/studio/: detection-panel.tsx  embedding-map.tsx  search-results.tsx  studio-page.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  scroll-area.tsx  select.tsx  slider.tsx  tabs.tsx  textarea.tsx  toast.tsx
frontend/src/hooks/: use-mount-effect.ts
frontend/src/lib/: api.ts  column-lineage.ts
frontend/src/types/: index.ts  speech.d.ts
static/: manifest.json  robots.txt  sitemap.xml
static/css/: style.css
static/js/: api.js  ui.js
templates/: index.html
