[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelbot-agent"
version = "0.1.0"
description = "Multimodal AI agent built using Pixeltable."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Web Framework & Server
    "flask",
    "flask-cors",
    "Flask-Limiter",
    "waitress",

    # AI and ML (Models, LLMs)
    "anthropic",
    "sentence-transformers",
    "tiktoken",
    "spacy",
    "openai",
    "mistralai",
    "numpy",
    "openpyxl",
    "pixeltable==0.3.12", # Specify version as found in requirements.txt

    # Utilities
    "python-dotenv",
    "duckduckgo-search",
    "serpapi",
    "yfinance",
    "workos",

    # Add development tools here if needed, e.g., under [project.optional-dependencies]
    "ruff" # Assuming ruff is used for linting/formatting
]

[project.urls]
"Homepage" = "https://github.com/pixeltable/pixelbot-main" # Replace with actual URL if different
"Bug Tracker" = "https://github.com/pixeltable/pixelbot-main/issues" # Replace if different

[tool.setuptools]
# Optional: Specify packages to include if not automatically discovered
# packages = find: {}

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# Add others as needed (e.g., `I` for isort).
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`)
fixable = ["ALL"]
unfixable = []

# Exclude a few common directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9+
target-version = "py39"

[tool.ruff.format]
# Use Python 3.9 formatting.
target-version = "py39"

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"