[project]
name = "pixelbot"
version = "2.0.0"
description = "Multimodal AI Agent powered by Pixeltable"
requires-python = ">=3.10"
dependencies = [
    # Web Framework
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "python-multipart",
    # AI and ML
    "pixeltable>=0.5.19",
    "anthropic",
    "openai",
    "mistralai",
    "sentence-transformers",
    "timm",
    "tiktoken",
    "spacy",
    "numpy",
    "umap-learn",
    "Pillow",
    "openpyxl",
    # Tools & Data
    "duckduckgo-search",
    "yfinance",
]
